styles/main.scss
@import "~bootstrap/scss/bootstrap";
@import "~@fortawesome/fontawesome-free/css/all.min.css";

body {
  background-color: black;
}

.navbar-dark .navbar-brand {
  font-family: "Oregano", cursive !important;
  color: red;
  font-weight: 900;
  font-size: 2em;
}

.cart-items {
  height: 300px;
  overflow: scroll;
}

.grey-box {
  float: left;
  margin: 2px;
  width: 200px;
  height: 200px;
}

#cart-thumb img {
  height: 100px;
}

.logout {
  margin: 0 20px;
  font-size: 25px;
  color: white;
}

#main-container {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  margin-top: 100px;
  align-content: center;

  #add-button {
    margin: 0 auto;
    text-align: center;
  }

  #form-container {
    width: 60%;
    margin: auto;
    justify-content: center;
    color: white;

    #formModal {
      color: black;
    }
  }

  #store {
    width: 90%;
    display: flex;
    flex-flow: row wrap;
    text-align: center;
    margin: auto;
    justify-content: center;

    .card {
      width: 300px;
      margin: 5px;

      .sale-badge {
        font-size: 1em;
        background-color: blue;
      }
    }

    .table {
      margin: 10px;
      width: 80%;
      margin: 0 auto;
    }
  }
}

#view {
  width: 90%;
  margin: auto;

  .details {
    min-width: 50%;
    max-width: 60%;
  }

  .description {
    white-space: pre-wrap;
  }
}

